2013-02-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Math.R (sumBinomMpfr): oops: docu had (-1)^k instead of (-1)^(n-k);
	alternating=FALSE has been wrong, since (r101, 2012-05-15)

2013-02-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/gmp-convert.R (..bigq2mpfr): precB = NULL --> at least 128

2013-02-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.5-2
	* R/as.R (asNumeric): new function; mainly for 'mpfrArray'

	* src/Ops.c (R_mpfr_mod): for Arith_mpfr[_i|_d]), R's %% and %/%:
	now working correctly, checked in
	* tests/arith-ex.R:

	* R/array.R (mkDet, determinant): provide recursive method for
	determinant() and hence det(). *Only* for small matrices !!

	* src/Summary.c (R_mpfr_sumprod): new for sum(x * y)  ==  x %*% y
	-> 20-40% faster matrix multiplication {still not fast!}.

2012-12-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.5-1, released to CRAN 2012-12-03

	* man/Rmpfr-package.Rd: a nice overview help page
	* inst/doc/log1mexp-note.Rnw: cosmetic changes {would be ready to submit now}.

2012-06-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.5-0, released to CRAN on 2012-07-07

	* R/as.R (mpfr): <bigz> or <bigq> arguments now "work" (with a warning).

	* R/gmp-convert.R (.bigz2mpfr, .bigq2mpfr): new optional argument
	\code{precB}, typically for increasing the default precision.

2012-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/optimizers.R (optimizeR): new simple golden ratio, thanks to
	Hans Borchert.

2012-05-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Depends): 0.4-8, released to CRAN on 2012-05-23

	* R/mpfr.R (diff.mpfr): new method; as diff.default() commits unclass(x)
	(str.mpfr): new.

2012-05-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/as.R (formatN.mpfr): add method
	* NAMESPACE: import S3 generic 'formatN' from gmp.
