@@ -10,7 +10,7 @@ importFrom("stats", stats__pnorm = pnorm)# import *and* rename !
 importFrom("gmp"
            , asNumeric
            , crossprod, tcrossprod# `%*%`, <- as we write (S4) methods for those
-           ## not yet (maybe never) , biginteger_as, biginteger_as_character
+           , biginteger_as, biginteger_as_character# <- .Call() them
 	   ## more to come
            , is.whole, formatN # because we add own S3 methods
 	   )
@@ -131,6 +131,7 @@ exportMethods(
               , "as.vector", "as.integer", "as.numeric"
               , "coerce", "coerce<-"
               , "cbind", "rbind"
+	      , "diag", "diag<-"
               , "dim", "dim<-", "dimnames", "dimnames<-"
               , "atan2", "beta", "lbeta"
               , "factorial"
